XW-3165: fixing squished button height

--- a/style-guide/styles/wds-components/_buttons.scss
+++ b/style-guide/styles/wds-components/_buttons.scss
@@ -155,6 +155,12 @@
 		margin: -1px 0;
 	}
 
+	// when button contains only icon, the icon has extra spacing at the bottom which makes whole
+	// button higher by 2px
+	>.wds-icon {
+		margin-bottom: -2px;
+	}
+
 	$social-colors: (
 		facebook: $wds-color-social-facebook,
 		googleplus: $wds-color-social-googleplus,
