--- a/style-guide/styles/wds-components/_global-navigation.scss
+++ b/style-guide/styles/wds-components/_global-navigation.scss
@@ -489,7 +489,7 @@
 		}
 
 		.wds-global-navigation__start-a-wiki-icon {
-			display: block;
+			display: inline;
 		}
 	}
 
